--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,18 @@
          <version>3.8.1</version>
          <scope>test</scope>
       </dependency>
-       <dependency>
-           <groupId>log4j</groupId>
-           <artifactId>log4j</artifactId>
-           <version>1.2.14</version>
-       </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.14</version>
+      </dependency>
+      <dependency>
+         <groupId>openni</groupId>
+         <artifactId>openni</artifactId>
+         <version>1.5.4.0</version>
+         <scope>system</scope>
+         <systemPath>${project.basedir}/org.OpenNI.jar</systemPath>
+      </dependency>
    </dependencies>
 
    <build>
