--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,8 @@
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <artifactId>junit-dep</artifactId>
+            <version>4.8.2</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
